--- a/RetratoComFoto/css/stytles.css
+++ b/RetratoComFoto/css/stytles.css
@@ -5,10 +5,12 @@ body {
     background-color: #f0f0f0;
 }
 .circular--portrait {
-    position: relative;
+    position: absolute;
+    left: 40%;
     width: 800px;
     height: 1200px;
     overflow: hidden;
+  
   }
   .circular--portrait img:first-child {
     position: absolute;
@@ -28,19 +30,8 @@ body {
     border-radius: 50%;
   }
   /* This is how you comment on a CSS*/
-.container {
-    width: 80%;
-    margin: 0 auto;
-}
-
 h1 {
-    color: #333;
+    color: #948531b4;
     text-align: center;
-}
-
-p {
-    font-size: 10em;
-    line-height: 1.6;
-    color: #666;
-    text-align: center;
+    font-size: 2.5cm;
 }
