--- a/SkillConnect/templates/landing.html
+++ b/SkillConnect/templates/landing.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SkillConnect | Encontre anestesiologistas qualificados com rapidez e segurança</title>
-    <style>
-        </style>
+    <link rel="stylesheet" href="landing_styles.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="/" class="logo">SEDE<span>NTIS</span></a>
+                <a href="/" class="logo">Skill<span>Connect</span></a>
                 <nav>
                     <ul>
                         <li><a href="/">Início</a></li>
