--- a/SkillConnect/templates/landing.html
+++ b/SkillConnect/templates/landing.html
@@ -155,7 +155,9 @@
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">
-                            <img src="/api/placeholder/60/60" alt="Sarah M.">
+                            <img src="https://marketplace.canva.com/EAE8eSD-Zyo/1/0/1600w/canva-blue%2C-white-and-green-medical-care-logo-oz1ox2GedbU.jpg" 
+                            alt="Sarah M."
+                            style="width: 100px; height: auto; display: inline-block; border-radius: 50%;">
                         </div>
                         <div class="author-info">
                             <div class="author-name">Clinica Fast</div>
